# RE-BREAKER

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-OFFENSIVE.md  README.md  SECURITY.md  THREAT-MODEL.md  pyproject.toml
data/: catalog.json
docs/: ARCHITECTURE.md  CHARTER.md  EXTERNAL-TOOLS-RESEARCH.md  F125-FINDINGS.md  HOOK-SPECS-COMPILATION.md  INTEGRATION-CATALOG.md  ORCHESTRATOR-DESIGN.md  QEMU-ANTI-DETECTION.md  RED-TEAM-MASTER-AGREEMENT-2.md  WINE.md
inject/: build.sh
re-mcps/: README.md
scripts/: build_catalog.py  frida_gadget_e2e_test.py  re_vm_diag.ps1  (+10 more)
servers/re-anti-debug-patch/: README.md  pyproject.toml
servers/re-anti-debug-patch/src/re_anti_debug_patch/: __init__.py  server.py
servers/re-anti-vm-spoof/: README.md  pyproject.toml
servers/re-anti-vm-spoof/src/re_anti_vm_spoof/: __init__.py  server.py  spoof.js
servers/re-cinematic-skip/: pyproject.toml
servers/re-cinematic-skip/src/re_cinematic_skip/: __init__.py  server.py
servers/re-encrypted-vm-bypass/: README.md  pyproject.toml
servers/re-encrypted-vm-bypass/src/re_encrypted_vm_bypass/: __init__.py  server.py
servers/re-entitlement-bypass/: pyproject.toml
servers/re-entitlement-bypass/src/re_entitlement_bypass/: __init__.py  server.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/: __init__.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/base/: __init__.py  dll_base.py  http_base.py  hypervisor_base.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/dll/: __init__.py  eos_sdk_dll.py  steam_ceg_dll.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/http/: __init__.py  eos_emulator.py  ioi_emulator.py  origin_emulator.py  pa_emulator.py  sega_sso_emulator.py  vendor_emulator.py  vendor_handshake_emulator.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/hypervisor/: coldloader_re_notes.md  hyperkd_re_notes.md  simplesvm_re_notes.md  technique_summary.md
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/hypervisor/id_dlls/: cd_id.c  template_id.c
servers/re-entitlement-bypass/src/re_entitlement_bypass/backends/hypervisor/patch_tables/: pattern_a_dw.ini  pattern_a_vmt.ini
servers/re-entitlement-bypass/src/re_entitlement_bypass/cli/: __init__.py  emulate.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/core/: __init__.py  audit.py  layer_base.py  sow_gate.py  status.py  target_manifest.py  wire_re.py
servers/re-entitlement-bypass/src/re_entitlement_bypass/data/: appids.json  targets.json
servers/re-entitlement-bypass/src/re_entitlement_bypass/data/hosts/: eos.hosts  ioi.hosts  origin.hosts  pa.hosts  sega.hosts
servers/re-entitlement-bypass/src/re_entitlement_bypass/data/protocols/: origin.md
servers/re-entitlement-bypass/src/re_entitlement_bypass/data/wire_sigs/: cd.json
servers/re-frida-runtime/: pyproject.toml
servers/re-frida-runtime/src/re_frida_runtime/: __init__.py  server.py
servers/re-frida-wine-runtime/: .gitignore  README.md  pyproject.toml
servers/re-frida-wine-runtime/src/re_frida_wine_runtime/: __init__.py  server.py
servers/re-frida-wine-runtime/src/re_frida_wine_runtime/hook_templates/: pattern-a-dw.js  pattern-a-vmt.js  pattern-a.js  pattern-b.js  pattern-c.js
servers/re-ghidra-remote/: pyproject.toml
servers/re-ghidra-remote/src/re_ghidra_remote/: __init__.py  server.py
servers/re-ida-remote/: pyproject.toml
servers/re-ida-remote/src/re_ida_remote/: __init__.py  server.py
servers/re-il2cpp-triage/: pyproject.toml
servers/re-il2cpp-triage/src/re_il2cpp_triage/: __init__.py  server.py
servers/re-injection-runtime/: README.md  pyproject.toml
servers/re-injection-runtime/src/re_injection_runtime/: __init__.py  ipc_consumer.py  load_target_sites.py  server.py
servers/re-injection-runtime/src/re_injection_runtime/hook_specs/: cpuid_bare_metal.c  cpuid_zero_at_sites.c  eos_init_zero.c  int3_nop.c  invd_nop.c  invd_nop_at_sites.c  method_dump.c  rdtsc_zero.c  steam_api_init_zero.c
servers/re-launch-and-observe/: pyproject.toml
servers/re-launch-and-observe/src/re_launch_and_observe/: __init__.py  server.py
servers/re-orchestrator/: pyproject.toml
servers/re-orchestrator/src/re_orchestrator/: server.py
servers/re-patch-apply/: pyproject.toml
servers/re-patch-apply/src/re_patch_apply/: __init__.py  server.py
servers/re-patch-apply/src/re_patch_apply/verify/: pe_sieve.py
servers/re-qemu-antidetect/: pyproject.toml
servers/re-qemu-antidetect/src/re_qemu_antidetect/: __init__.py  server.py
servers/re-target-fingerprint/: pyproject.toml
servers/re-target-fingerprint/src/re_target_fingerprint/: __init__.py  server.py
servers/re-traffic-capture/: pyproject.toml
servers/re-traffic-capture/src/re_traffic_capture/: __init__.py  server.py
servers/re-vendor-anti-tamper/: README.md  pyproject.toml
servers/re-vendor-anti-tamper/src/re_vendor_anti_tamper/: __init__.py  server.py
servers/re-vendor-anti-tamper/src/re_vendor_anti_tamper/backends/unpacker/: anpa1200.py
servers/re-vm-bridge/: README.md  pyproject.toml
servers/re-vm-bridge/src/re_vm_bridge/: __init__.py  proxy.py
servers/re-vm-control/: pyproject.toml
servers/re-vm-control/src/re_vm_control/: __init__.py  server.py
servers/re-vm-debug/: pyproject.toml
servers/re-vm-debug/src/re_vm_debug/: __init__.py  gdb_remote.py  server.py
servers/re-vm-decrypt/: README.md  pyproject.toml
servers/re-vm-decrypt/src/re_vm_decrypt/: __init__.py  server.py
servers/re-vm-launch/: pyproject.toml
servers/re-vm-launch/src/re_vm_launch/: __init__.py  registry.py  server.py
servers/re-vm-memory/: pyproject.toml
servers/re-vm-memory/src/re_vm_memory/: __init__.py  page_walk.py  server.py
servers/re-vm-ssh/: pyproject.toml
servers/re-vm-ssh/src/re_vm_ssh/: __init__.py  server.py
servers/re-winedbg/: README.md  pyproject.toml
servers/re-winedbg/src/re_winedbg/: __init__.py  server.py
servers/re-x64dbg-remote/: pyproject.toml
servers/re-x64dbg-remote/src/re_x64dbg_remote/: __init__.py  server.py
(+115 files in other folders)
