[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-encrypted-vm-bypass"
version = "0.4.0"
description = "RE-BREAKER re-encrypted-vm-bypass server — see https://github.com/Heretek-RE/RE-BREAKER for the charter."
requires-python = ">=3.11"
authors = [{name = "RE-BREAKER contributors"}]
license = {text = "AGPL-3.0-or-later with Offensive-Research-Use Clause"}
dependencies = [
    "mcp[cli]>=1.2",
    "pydantic>=2.6",
]
[project.scripts]
re-encrypted-vm-bypass = "re_encrypted_vm_bypass.server:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src"
