[project]
name = "re-orchestrator"
version = "0.1.0"
description = "RE-BREAKER orchestrator — chains catalog match + bypass plan + entitlement plan into a single workflow"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
