[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-target-fingerprint"
version = "0.1.0"
description = "RE-BREAKER re-target-fingerprint server (M2) — per-target YARA fingerprinting."
requires-python = ">=3.11"
authors = [{name = "RE-BREAKER contributors"}]
license = {text = "AGPL-3.0-or-later with Offensive-Research-Use Clause"}
dependencies = [
    "mcp[cli]>=1.2",
    "pydantic>=2.6",
    "yara-python>=4.3",
]

[project.scripts]
re-target-fingerprint = "re_target_fingerprint.server:main"

[tool.setuptools.packages.find]
where = ["src"]
